--- a/styles.css
+++ b/styles.css
@@ -15,7 +15,11 @@ body {
 /* Global Styles */
 .container {
   margin: 0 auto;
-  padding: 0 15px; /* Space between content and edge of screen */
+  padding: 0 8px; /* Space between content and edge of screen */
+}
+.container-center {
+  display: flex;
+  justify-content: center;
 }
 
 /* Mobile first approach */
@@ -111,22 +115,24 @@ body {
 .inner-hero {
   position: relative;
   height: 70vh;
-  background-image: url("images/hero_with_logo.png"); /* Path to the image */
-  background-size: cover; /* Ensures the image covers the whole div */
+  background-image: url("images/hero_with_logo.png");
+  background-size: cover;
   background-position: calc(50% + 44px) calc(50% + 160px);
   background-repeat: no-repeat;
 }
-.hero-content {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-  color: white;
-}
 
-/* Media query for larger screens */
+@media screen and (min-width: 900px) {
+  .inner-hero {
+    background-size: contain;
+  }
+  .hero-title {
+    padding-top: 40px;
+  }
+}
 @media screen and (min-width: 768px) {
+  .inner-hero {
+    background-size: contain;
+  }
   .hero-section {
     background-position: center top; /* Reveals more of the image as the screen size increases */
   }
@@ -148,6 +154,7 @@ body {
   line-height: 1.2;
   margin-bottom: 20px;
   color: white;
+  text-align: center;
 }
 
 /* About Section */
@@ -156,9 +163,12 @@ body {
   padding: 60px 20px;
   text-align: center;
 }
+.about-container {
+  max-width: 500px;
+}
 .about-title {
   margin-top: 80px;
-  font-size: 36px;
+  font-size: 32px;
   margin-bottom: 20px;
 }
 
@@ -172,6 +182,9 @@ body {
   border-radius: 9px;
   width: 100%;
 }
+.about-body p {
+  margin-bottom: 16px;
+}
 
 /* Team Section */
 .team {
@@ -181,7 +194,7 @@ body {
 }
 .team-title {
   color: #8aa19f;
-  font-size: 44px;
+  font-size: 42px;
 }
 
 .team-member {
@@ -195,12 +208,30 @@ body {
   border-radius: 5px;
 }
 
+.member-body {
+  padding: 8px 0;
+}
+
 /* Services Section */
 .services {
   display: flex;
+  margin: 48px 0 0 0;
   flex-wrap: wrap;
-  justify-content: center;
-  padding: 60px 20px;
+}
+
+@media (min-width: 768px) {
+  .services {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+
+  .service-card {
+    flex: 1 1 0;
+  }
+
+  .service-card:not(:last-child) {
+    margin-right: 20px;
+  }
 }
 
 .service-card {
@@ -217,11 +248,19 @@ body {
 }
 .service-card img {
   width: 100%;
-  border-radius: 8px;
+  border-radius: 8px 8px 0 0;
+  height: 318px;
+  object-fit: cover;
 }
 
-.service-card p {
-  padding: 24px 0;
+.service-body {
+  padding: 24px;
+}
+
+.services-title {
+  font-size: 48px;
+  margin: 40px 0;
+  text-align: center;
 }
 /* Contact Section */
 .contact {
@@ -261,6 +300,12 @@ body {
   font-family: Inter;
   border-radius: 51px;
   width: 144px;
+}
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 /* Footer */
