--- a/styles.css
+++ b/styles.css
@@ -122,6 +122,7 @@ body {
 .inner-hero {
   position: relative;
   height: 70vh;
+  min-height: 600px;
   background-image: url("images/hero_with_logo.png");
   background-size: cover;
   background-position: calc(50% + 44px) calc(50% + 160px);
