--- a/styles.css
+++ b/styles.css
@@ -125,7 +125,7 @@ body {
   min-height: 600px;
   background-image: url("images/hero_with_logo.png");
   background-size: cover;
-  background-position: calc(50% + 44px) calc(50% + 160px);
+  background-position: calc(50%) calc(50% + 160px);
   background-repeat: no-repeat;
 }
 
@@ -159,11 +159,16 @@ body {
 
 .hero-title {
   margin: 32px 16px;
-  font-size: 56px;
+  font-size: 40px;
   line-height: 1.2;
   margin-bottom: 20px;
   color: white;
   text-align: center;
+}
+@media screen and (min-width: 400px) {
+  .hero-title {
+    font-size: 56px;
+  }
 }
 
 /* About Section */
