--- a/styles.css
+++ b/styles.css
@@ -121,32 +121,32 @@ body {
 
 .inner-hero {
   position: relative;
-  height: 70vh;
-  min-height: 600px;
+  height: 650px;
   background-image: url("images/hero_with_logo.png");
   background-size: cover;
-  background-position: calc(50%) calc(50% + 160px);
+  background-position: calc(50%) calc(50% + 80px);
   background-repeat: no-repeat;
 }
 
 .hero-transition {
   height: 50px;
   width: 100%;
-  background-color: #668a82;
+  background-color: #eeeae7;
   position: relative;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 .hero-transition::after {
   content: "";
+  background-color: #668a82;
   position: absolute;
-  background-color: #eeeae7;
   height: 95%;
   width: 130%; /* Expanding the width to create the effect */
   left: -15%; /* Position it to the left */
-  bottom: -1px;
-  border-top-left-radius: 50% 100%; /* Creates the moon shape */
-  border-top-right-radius: 50% 100%;
+  top: -1px;
+
+  border-bottom-left-radius: 50% 100%; /* Creates the moon shape */
+  border-bottom-right-radius: 50% 100%;
 }
 @media screen and (min-width: 768px) {
   .hero-transition {
@@ -160,9 +160,6 @@ body {
 @media screen and (min-width: 900px) {
   .inner-hero {
     background-size: contain;
-  }
-  .hero-title {
-    padding-top: 40px;
   }
 }
 @media screen and (min-width: 768px) {
@@ -193,7 +190,7 @@ body {
   color: white;
   text-align: center;
 }
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 740px) {
   .hero-title {
     font-size: 56px;
   }
